--- a/Data_Understanding/DU_feature_description_statistics.ipynb
+++ b/Data_Understanding/DU_feature_description_statistics.ipynb
@@ -5,7 +5,7 @@
    "id": "f9ecbe5f",
    "metadata": {},
    "source": [
-    "# Data Understanding"
+    "# Data Understanding - Features Description and Statistics"
    ]
   },
   {
